--- a/hosihime/hosihime/hosihime.vcxproj
+++ b/hosihime/hosihime/hosihime.vcxproj
@@ -50,6 +50,7 @@
     <ClCompile Include="Code\Source\MyRectangle.cpp" />
     <ClCompile Include="Code\Source\Opening.cpp" />
     <ClCompile Include="Code\Source\Operation.cpp" />
+    <ClCompile Include="Code\Source\Pause.cpp" />
     <ClCompile Include="Code\Source\Player.cpp" />
     <ClCompile Include="Code\Source\PlayMode_Play.cpp" />
     <ClCompile Include="Code\Source\PlayMode_Select.cpp" />
@@ -133,6 +134,7 @@
     <ClInclude Include="Code\Include\IParticleController.h" />
     <ClInclude Include="Code\Include\Opening.h" />
     <ClInclude Include="Code\Include\Operation.h" />
+    <ClInclude Include="Code\Include\Pause.h" />
     <ClInclude Include="Code\Include\Player.h" />
     <ClInclude Include="Code\Include\PlayMode_Play.h" />
     <ClInclude Include="Code\Include\PlayMode_Select.h" />
