--- a/hosihime/hosihime/hosihime.vcxproj
+++ b/hosihime/hosihime/hosihime.vcxproj
@@ -54,6 +54,8 @@
     <ClCompile Include="Code\Source\Player.cpp" />
     <ClCompile Include="Code\Source\PlayMode_Play.cpp" />
     <ClCompile Include="Code\Source\PlayMode_Select.cpp" />
+    <ClCompile Include="Code\Source\StarFadeParticle.cpp" />
+    <ClCompile Include="Code\Source\StarFade.cpp" />
     <ClCompile Include="Code\Source\Point.cpp" />
     <ClCompile Include="Code\Source\Renderer.cpp" />
     <ClCompile Include="Code\Source\Respawn.cpp" />
@@ -135,12 +137,11 @@
     <ClInclude Include="Code\Include\Opening.h" />
     <ClInclude Include="Code\Include\Operation.h" />
     <ClInclude Include="Code\Include\Pause.h" />
-    <ClInclude Include="Code\Include\PlayEndEffect.h" />
-    <ClInclude Include="Code\Include\PlayEndParticle.h" />
-    <ClInclude Include="Code\Include\PlayEndParticleController.h" />
     <ClInclude Include="Code\Include\Player.h" />
     <ClInclude Include="Code\Include\PlayMode_Play.h" />
     <ClInclude Include="Code\Include\PlayMode_Select.h" />
+    <ClInclude Include="Code\Include\StarFadeParticle.h" />
+    <ClInclude Include="Code\Include\StarFade.h" />
     <ClInclude Include="Code\Include\Point.h" />
     <ClInclude Include="Code\Include\Renderer.h" />
     <ClInclude Include="Code\Include\Result.h" />
