--- a/hosihime/hosihime/hosihime.vcxproj.filters
+++ b/hosihime/hosihime/hosihime.vcxproj.filters
@@ -103,6 +103,12 @@
     <Filter Include="ヘッダー ファイル\gameobject\background_Star">
       <UniqueIdentifier>{655b1069-b9f4-46e9-b79c-93329bde92e1}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\starFade">
+      <UniqueIdentifier>{184ed08e-4697-4f32-a032-05c6eadde3e3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダー ファイル\starFade">
+      <UniqueIdentifier>{11be5211-3e63-48f5-be4f-eaf6209f5f79}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Code\Source\Star_wave.cpp">
@@ -316,7 +322,13 @@
       <Filter>ソース ファイル\gameobject\objects</Filter>
     </ClCompile>
     <ClCompile Include="Code\Source\Pause.cpp">
-      <Filter>ソース ファイル\scene</Filter>
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Code\Source\StarFadeParticle.cpp">
+      <Filter>ソース ファイル\starFade</Filter>
+    </ClCompile>
+    <ClCompile Include="Code\Source\StarFade.cpp">
+      <Filter>ソース ファイル\starFade</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -371,8 +383,14 @@
     <ClInclude Include="Code\Include\Menu.h">
       <Filter>ヘッダー ファイル\scene</Filter>
     </ClInclude>
+    <ClInclude Include="Code\Include\Title.h">
+      <Filter>ヘッダー ファイル\scene</Filter>
+    </ClInclude>
     <ClInclude Include="Code\Include\SceneManager.h">
       <Filter>ヘッダー ファイル\scene</Filter>
+    </ClInclude>
+    <ClInclude Include="Code\Include\Scroll.h">
+      <Filter>ヘッダー ファイル\stage</Filter>
     </ClInclude>
     <ClInclude Include="Code\Include\Stage.h">
       <Filter>ヘッダー ファイル\stage</Filter>
@@ -564,22 +582,13 @@
       <Filter>ヘッダー ファイル\scene</Filter>
     </ClInclude>
     <ClInclude Include="Code\Include\Pause.h">
-      <Filter>ヘッダー ファイル\scene</Filter>
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="Code\Include\Title.h">
-      <Filter>ヘッダー ファイル\scene</Filter>
+    <ClInclude Include="Code\Include\StarFadeParticle.h">
+      <Filter>ヘッダー ファイル\starFade</Filter>
     </ClInclude>
-    <ClInclude Include="Code\Include\Scroll.h">
-      <Filter>ヘッダー ファイル\stage</Filter>
-    </ClInclude>
-    <ClInclude Include="Code\Include\PlayEndParticle.h">
-      <Filter>ヘッダー ファイル\effect\particle</Filter>
-    </ClInclude>
-    <ClInclude Include="Code\Include\PlayEndParticleController.h">
-      <Filter>ヘッダー ファイル\effect\particle</Filter>
-    </ClInclude>
-    <ClInclude Include="Code\Include\PlayEndEffect.h">
-      <Filter>ヘッダー ファイル\effect</Filter>
+    <ClInclude Include="Code\Include\StarFade.h">
+      <Filter>ヘッダー ファイル\starFade</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
